// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Right border 1`] = `
.c0 {
  border-right: 0.2em blue solid;
}

<button
  class="c0"
/>
`;

exports[`Right border not modifiable 1`] = `
.c0 {
  border-right: 0.2em blue solid;
  color: #fff;
  cursor: not-allowed!important;
}

<button
  class="c0"
/>
`;
